--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,177 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 0.4s;
+}
+
+body {
+  background-color: #eee;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  display: inline-block;
+}
+
+/* Navigation */
+
+nav {
+  padding: 10px 0;
+  width: 30%;
+  margin: auto;
+  background-color: #fff;
+  border: 0;
+  border-radius: 10px;
+  margin-top: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+nav i {
+  font-size: 20px;
+}
+
+nav ul {
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+nav ul li a {
+  padding: 15px;
+  display: grid;
+  place-items: center;
+  border: 0;
+  border-radius: 10%;
+}
+
+nav ul li a.active,
+nav ul li a:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+/* Create Post */
+
+.create-post {
+  width: 30%;
+  padding: 2rem;
+  margin: 3em auto;
+  background: #fff;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.post-top {
+  display: flex;
+  align-items: center;
+}
+
+.post-top input {
+  width: 85%;
+  padding: 0.8em 0 0.8em 1em;
+  margin-left: auto;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+
+.post-middle {
+  text-align: center;
+  margin: 1em 0;
+}
+
+.post-middle input {
+  font-size: 18px;
+}
+
+.post-bottom {
+  text-align: center;
+}
+
+.post-btn {
+  font-size: 18px;
+  padding: 0.5em 1.5em;
+  margin: auto;
+  border: 0;
+  border-radius: 6px;
+  background-color: blue;
+  color: #fff;
+  cursor: pointer;
+  letter-spacing: 2px;
+  font-weight: 700;
+}
+
+.post-btn:hover {
+  background-color: blueviolet;
+}
+
+.post-btn:active {
+  transform: scale(0.9);
+}
+
+.profile-info .logo,
+.post-logo {
+  width: 45px;
+  height: 45px;
+  border: 2px solid gray;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile-info .logo img,
+.post-logo img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Posts */
+
+.post {
+  width: 40%;
+  padding: 1.5em;
+  margin: auto;
+  background-color: #fff;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.post-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-info i {
+  font-size: 20px;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  display: grid;
+  place-items: center;
+  border: 0;
+  border-radius: 50%;
+}
+
+.post-info i:hover {
+  background-color: rgba(128, 128, 128, 0.3);
+}
+
+.profile-info {
+  display: flex;
+  align-items: center;
+}
+
+.profile-info-text {
+  margin-left: 10px;
+}
+
+.profile-info-text .time {
+  font-size: 14px;
+  font-weight: 700;
+  color: grey;
 }
